# stock-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  dev-requirements.txt  docker-compose.yml
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  app_version.py  config.py  database.py  main.py  package-lock.json  package.json  pyproject.toml  releases.json  requirements-dev.txt  requirements.txt  schema.postgres.sql  schema.sql
backend/auth/: models.py  router.py  service.py
backend/middleware/: auth.py
backend/routers/: alerts.py  chat.py  contact.py  indicators.py  market.py  paper.py  portfolio.py  public_landing.py  push.py  release.py  ws.py
backend/services/: agent_service.py  ai_quota.py  alert_service.py  data_retention.py  market_data.py  portfolio_service.py  push_service.py  release_notes.py  technical.py  user_prefs.py
backend/src/: app.module.ts  main.ts
backend/src/common/filters/: http-exception.filter.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/src/modules/auth/dto/: register.dto.ts
backend/src/modules/auth/strategies/: jwt.strategy.ts
backend/src/modules/health/: health.controller.ts
backend/src/modules/stocks/: stocks.controller.ts  stocks.service.spec.ts  stocks.service.ts
backend/src/modules/users/: users.service.spec.ts  users.service.ts
backend/test/: app.e2e-spec.ts
backend/tests/: test_health.py  test_release_notes.py
backend/tools/: definitions.py  generate_vapid_keys.py
(+110 files in other folders)
