[project]
name = "stock-agent-backend"
version = "0.0.0"
description = "Stock Agent API"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["."]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
